--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
                         <Import-Package>org.osgi.framework,org.osgi.service.cm,org.apache.felix.dm,org.osgi.service.event,org.slf4j,com.whizzosoftware.hobson.api.osgi.activator,com.whizzosoftware.hobson.api.*</Import-Package>
                         <Bundle-Activator>com.whizzosoftware.hobson.api.osgi.activator.HobsonBundleActivator</Bundle-Activator>
                         <Provide-Capability>hobson.plugin=com.whizzosoftware.hobson.sample.SamplePlugin</Provide-Capability>
+                        <Bundle-Category>hobson-plugin</Bundle-Category>
                     </instructions>
                 </configuration>
             </plugin>
