--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Import-Package>org.osgi.framework,org.osgi.service.cm,org.apache.felix.dm,org.osgi.service.event,org.slf4j,com.whizzosoftware.hobson.api.osgi.activator,com.whizzosoftware.hobson.api.*</Import-Package>
+                        <Import-Package>org.osgi.framework,org.osgi.service.cm,org.apache.felix.dm,org.osgi.service.event,org.slf4j,com.whizzosoftware.hobson.api.osgi.activator,com.whizzosoftware.hobson.api.*;version="[0.3.0,0.4)</Import-Package>
                         <Bundle-Activator>com.whizzosoftware.hobson.api.osgi.activator.HobsonBundleActivator</Bundle-Activator>
                         <Provide-Capability>hobson.plugin=com.whizzosoftware.hobson.sample.SamplePlugin</Provide-Capability>
                         <Bundle-Category>hobson-plugin</Bundle-Category>
