--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,22 @@
     <groupId>com.whizzosoftware.hobson.hub</groupId>
     <artifactId>hobson-hub-sample</artifactId>
     <packaging>bundle</packaging>
-    <version>0.4.1-SNAPSHOT</version>
+    <version>0.5.0-SNAPSHOT</version>
     <name>Sample Devices</name>
     <description>Provides some sample devices for testing purposes.</description>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.dependencymanager</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.shell</artifactId>
+            <version>1.4.3</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -16,7 +28,13 @@
         <dependency>
             <groupId>com.whizzosoftware.hobson.hub</groupId>
             <artifactId>hobson-hub-api</artifactId>
-            <version>0.7.0</version>
+            <version>0.8.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.whizzosoftware.hobson.hub</groupId>
+            <artifactId>hobson-hub-core</artifactId>
+            <version>0.8.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -45,8 +63,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Import-Package>org.osgi.framework,org.osgi.service.cm,org.apache.felix.dm,org.osgi.service.event,org.slf4j,com.whizzosoftware.hobson.api.osgi.activator,com.whizzosoftware.hobson.api.*;version="[0.7.0,0.8)</Import-Package>
-                        <Bundle-Activator>com.whizzosoftware.hobson.api.osgi.activator.HobsonBundleActivator</Bundle-Activator>
+                        <Import-Package>org.osgi.framework,org.osgi.service.cm,org.apache.felix.dm,org.apache.felix.shell,org.osgi.service.event,org.slf4j,com.whizzosoftware.hobson.api.osgi.activator,com.whizzosoftware.hobson.api.*;version="[0.8.0,0.9)</Import-Package>
+                        <Bundle-Activator>com.whizzosoftware.hobson.sample.SampleBundleActivator</Bundle-Activator>
                         <Provide-Capability>hobson.plugin=com.whizzosoftware.hobson.sample.SamplePlugin</Provide-Capability>
                         <Bundle-Category>hobson-plugin</Bundle-Category>
                     </instructions>
